--- a/orderHere.html
+++ b/orderHere.html
@@ -1,29 +1,13 @@
-<!-- 1. Enter ! to load boilerplate HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>PizzaChez</title>
 
+    <title>Order Here</title>
 </head>
 <body>
-    <h1 id="h1Id">Hello</h1>
-    <h2 id="h2Id">Welcome</h2>
-
-    <form id="formId">
-        <input  type="button" value="Order Here"  id="buttonId"  onclick="openOrderHere()">
-    </form>
-    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-homemade-pizza-horizontal-1542312378.png?crop=1.00xw:1.00xh;0,0&resize=980:*" alt="image">
-
-    <div id="id_of_div1">Available sizes:</div>
-    <div id="id_of_div2">Our today Toppings are:</div>
-    <div id="id_of_div3">Our today Crusts are:</div>
-    
-   
-
-
 <div class="main">
     <form>
     <div id="id_of_div">Please select your toppings:
@@ -38,6 +22,7 @@
         <input type="checkbox" id="id_of_checkbox5" class="items" name="top5" value="red pepper">
         <label for="top5">red pepper</label>
     </div>
+
     <div id="id_of_div">Please select your curst:
         <input type="radio" id="id_of_radio1" class="items" name="top6" value="thin">
         <label for="top1">thin</label>
@@ -49,35 +34,18 @@
 
     <div id="id_of_div">Please select size:
         <input type="radio" id="id_of_radio4" class="items" name="top6" value="thin">
-        <label for="top1">small</label>
+        <label for="top1">thin</label>
         <input type="radio" id="id_of_radio5" class="items" name="top6" value="thick">
-        <label for="top2">medium</label>
+        <label for="top2">thick</label>
         <input type="radio" id="id_of_radio6" class="items" name="top6" value="brooklyn">
-        <label for="top3">large</label>
+        <label for="top3">brooklyn</label>
     </div>
 </form>
 </div>
     <input type="button" onclick='printChecked()' value="Submit your order"/>
-    <div id="id_of_div4">
-        <a href="https://google.com">Contact us</a>
-        <a href="https://google.com">About us</a>
-    
-    </div>
-    <div id="id_of_div9">:</div>
-    <h1 id="h3Id">...coming...</h1>
-    <input type="button" onclick='ready()' value="check status"/>
-    <h2 id="h4Id">Welcome</h2>
 
 </body>
+
 <script src="test.js"></script>
 
 </html>
-
-<!-- 2. Include the following
-    - An updated title tag
-    - At least two lists
-    - Multiple headings and at least one paragraph
-    - At least one image
-    - At least two links -->
-<!-- HTML Elements (MDN): https://developer.mozilla.org/en-US/docs/Web/HTML/Element -->
-
